--- a/footer-template.html
+++ b/footer-template.html
@@ -20,6 +20,29 @@
                         <li><a href="#">Blogs</a></li>
                     </ul>
                 </div>
+                <div class="footer-col">
+                    <h4>Global Presence</h4>
+                    <ul>
+                        <li><a href="countries/uae.html">UAE</a></li>
+                        <li><a href="countries/saudi-arabia.html">Saudi Arabia</a></li>
+                        <li><a href="countries/qatar.html">Qatar</a></li>
+                        <li><a href="countries/oman.html">Oman</a></li>
+                        <li><a href="countries/kuwait.html">Kuwait</a></li>
+                        <li><a href="countries/bahrain.html">Bahrain</a></li>
+                        <li><a href="countries/egypt.html">Egypt</a></li>
+                        <li><a href="countries/south-africa.html">South Africa</a></li>
+                        <li><a href="countries/nigeria.html">Nigeria</a></li>
+                        <li><a href="countries/kenya.html">Kenya</a></li>
+                        <li><a href="countries/singapore.html">Singapore</a></li>
+                        <li><a href="countries/malaysia.html">Malaysia</a></li>
+                        <li><a href="countries/indonesia.html">Indonesia</a></li>
+                        <li><a href="countries/thailand.html">Thailand</a></li>
+                        <li><a href="countries/australia.html">Australia</a></li>
+                        <li><a href="countries/usa.html">USA</a></li>
+                        <li><a href="countries/canada.html">Canada</a></li>
+                        <li><a href="countries/uk.html">UK</a></li>
+                    </ul>
+                </div>
             </div>
             
             <!-- Company Details Section -->
