Update footer with comprehensive page links
FOOTER ENHANCEMENT:
✅ Added all main navigation pages
✅ Added Resources & Info section with:
   - IBR Certified Valves landing page
   - Globe Valve Manufacturers landing page
   - Valve Exporter Middle East landing page
   - FAQ pages (Types, Materials, Standards, Maintenance)
   - Technical Resources

FOOTER STRUCTURE (4 Columns):
1. Product Range (dynamic product list)
2. Quick Links (main navigation)
3. Resources & Info (landing pages, FAQs, technical docs)
4. Global Presence (18 country pages)

Total Links: 50+ pages accessible from footer
SEO Benefit: Better internal linking structure

--- a/footer-template.html
+++ b/footer-template.html
@@ -16,8 +16,22 @@
                         <li><a href="industries.html">Industries</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resources.html">Resources</a></li>
+                        <li><a href="faqs.html">FAQs</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">Blogs</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Resources & Info</h4>
+                    <ul>
+                        <li><a href="ibr-certified-valve-manufacturer.html">IBR Certified Valves</a></li>
+                        <li><a href="globe-valve-manufacturers-india.html">Globe Valve Manufacturers</a></li>
+                        <li><a href="valve-exporter-middle-east.html">Valve Exporter Middle East</a></li>
+                        <li><a href="faqs/valve-types-selection.html">Valve Types & Selection</a></li>
+                        <li><a href="faqs/valve-materials.html">Valve Materials</a></li>
+                        <li><a href="faqs/valve-standards.html">Valve Standards</a></li>
+                        <li><a href="faqs/valve-maintenance.html">Valve Maintenance</a></li>
+                        <li><a href="docs/technical-resources/technical-resources.html">Technical Resources</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
