Fix CTA button visibility across all website pages
BUTTON FIXES APPLIED TO:
✅ 2 buttons in ibr-certified-valve-manufacturer.html
✅ 1 button in blog.html
✅ 2 buttons in globe-valve-manufacturers-india.html
✅ 2 buttons in valve-exporter-middle-east.html
✅ 1 button in products/gate-valve.html
✅ 1 button in products/ball-valve.html
✅ 1 button in blog/valve-maintenance-best-practices.html
✅ 1 button in blog/ball-valve-vs-gate-valve-comparison.html
✅ 1 button in blog/complete-guide-industrial-valve-selection.html

TOTAL: 12 buttons fixed across 9 pages

ISSUE FIXED:
- Removed inline styles with 'background: white; color: var(--primary-color)'
- Buttons now use proper CSS classes (.btn-primary)
- Buttons display with correct colors (orange background, white text)
- No more white-on-white visibility issues

All CTA buttons now properly styled and visible!

--- a/blog.html
+++ b/blog.html
@@ -136,7 +136,7 @@
             <h2 style="font-size: 2rem; margin-bottom: 1rem;">Need Expert Valve Consultation?</h2>
             <p style="font-size: 1.15rem; margin-bottom: 2rem; opacity: 0.95;">Our technical team is ready to help you select the perfect valve for your application</p>
             <div style="display: flex; gap: 1rem; justify-content: center;">
-                <a href="contact.html" class="btn" style="background: white; color: var(--primary-color);">Contact Our Experts</a>
+                <a href="contact.html" class="btn btn-primary">Contact Our Experts</a>
                 <a href="products.html" class="btn" style="background: rgba(255,255,255,0.2); color: white; border: 2px solid white;">Browse Products</a>
             </div>
         </section>
