--- a/globe-valve-manufacturers-india.html
+++ b/globe-valve-manufacturers-india.html
@@ -69,7 +69,7 @@
             <div class="container" style="text-align: center; color: white;">
                 <h1 style="font-size: 3rem; margin-bottom: 1.5rem; color: white;">Globe Valve Manufacturers in India</h1>
                 <p style="font-size: 1.3rem; margin-bottom: 2rem; max-width: 900px; margin-left: auto; margin-right: auto;">Supreme Valves India - Leading globe valve manufacturers in Ahmedabad, Gujarat with 38+ years of manufacturing excellence. We manufacture and export Y-pattern, angle, and needle globe valves to industries worldwide.</p>
-                <a href="contact.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2.5rem;">Request Quote for Globe Valves</a>
+                <a href="contact.html" class="btn btn-primary">Request Quote for Globe Valves</a>
             </div>
         </section>
 
@@ -257,7 +257,7 @@
                     Contact Supreme Valves India today for high-quality globe valves manufactured in Ahmedabad, Gujarat with 38+ years of manufacturing excellence.
                 </p>
                 <div style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="contact.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2.5rem;">Request Quote</a>
+                    <a href="contact.html" class="btn btn-primary">Request Quote</a>
                     <a href="https://api.whatsapp.com/send/?phone=919773278770&text=Inquiry%20about%20Globe%20Valves" target="_blank" class="btn btn-secondary" style="font-size: 1.1rem; padding: 1rem 2.5rem;">
                         <i class="fab fa-whatsapp"></i> WhatsApp Inquiry
                     </a>
