--- a/ibr-certified-valve-manufacturer.html
+++ b/ibr-certified-valve-manufacturer.html
@@ -69,7 +69,7 @@
             <div class="container" style="text-align: center; color: white;">
                 <h1 style="font-size: 3rem; margin-bottom: 1.5rem; color: white;">IBR Certified Valve Manufacturer in India</h1>
                 <p style="font-size: 1.3rem; margin-bottom: 2rem; max-width: 900px; margin-left: auto; margin-right: auto;">Supreme Valves India - Your trusted IBR certified valve manufacturer and supplier with 38+ years of experience, ISO certification, and complete material traceability.</p>
-                <a href="contact.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2.5rem;">Request IBR Certified Valves Quote</a>
+                <a href="contact.html" class="btn btn-primary">Request IBR Certified Valves Quote</a>
             </div>
         </section>
 
@@ -274,7 +274,7 @@
                     Contact us today for IBR certified valves with complete documentation, material traceability, and expert technical support.
                 </p>
                 <div style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="contact.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2.5rem;">Request Quote</a>
+                    <a href="contact.html" class="btn btn-primary">Request Quote</a>
                     <a href="https://api.whatsapp.com/send/?phone=919773278770&text=Inquiry%20about%20IBR%20Certified%20Valves" target="_blank" class="btn btn-secondary" style="font-size: 1.1rem; padding: 1rem 2.5rem;">
                         <i class="fab fa-whatsapp"></i> WhatsApp Inquiry
                     </a>
