--- a/products/ball-valve.html
+++ b/products/ball-valve.html
@@ -288,7 +288,7 @@
                 <p style="font-size: 1.1rem; margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
                     We export API 6D floating and trunnion ball valves to UAE, Saudi Arabia, Qatar, Oman, Kuwait with complete documentation and logistics support.
                 </p>
-                <a href="../valve-exporter-middle-east.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.05rem; padding: 0.9rem 2rem;">
+                <a href="../valve-exporter-middle-east.html" class="btn btn-primary">
                     <i class="fas fa-globe"></i> Learn About Our Export Services
                 </a>
             </div>
