--- a/valve-exporter-middle-east.html
+++ b/valve-exporter-middle-east.html
@@ -72,7 +72,7 @@
             <div class="container" style="text-align: center; color: white;">
                 <h1 style="font-size: 3rem; margin-bottom: 1.5rem; color: white;">Leading Valve Exporter to Middle East</h1>
                 <p style="font-size: 1.3rem; margin-bottom: 2rem; max-width: 900px; margin-left: auto; margin-right: auto;">Supreme Valves India - Your trusted valve exporter to UAE, Saudi Arabia, Qatar, Oman, Kuwait, and Bahrain with 38+ years of export experience and complete documentation support.</p>
-                <a href="contact.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2.5rem;">Request Export Quote</a>
+                <a href="contact.html" class="btn btn-primary">Request Export Quote</a>
             </div>
         </section>
 
@@ -286,7 +286,7 @@
                     Contact Supreme Valves India today for competitive pricing, complete documentation, and reliable delivery to UAE, Saudi Arabia, Qatar, Oman, Kuwait, and Bahrain.
                 </p>
                 <div style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="contact.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2.5rem;">Request Export Quote</a>
+                    <a href="contact.html" class="btn btn-primary">Request Export Quote</a>
                     <a href="https://api.whatsapp.com/send/?phone=919773278770&text=Inquiry%20about%20Valve%20Export%20to%20Middle%20East" target="_blank" class="btn btn-secondary" style="font-size: 1.1rem; padding: 1rem 2.5rem;">
                         <i class="fab fa-whatsapp"></i> WhatsApp Inquiry
                     </a>
