--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,27 @@
                     </div>
                 </article>
 
+                <!-- Blog Post 4 - NEW -->
+                <article style="background: var(--white-color); border-radius: 12px; overflow: hidden; box-shadow: var(--shadow-md); transition: transform 0.3s ease;">
+                    <img src="assets/Valves and Projects/hero_image.jpeg" alt="Cast Steel WCB Globe Valve with Butt Weld Ends" style="width: 100%; height: 250px; object-fit: cover;">
+                    <div style="padding: 2rem;">
+                        <div style="display: flex; gap: 1rem; margin-bottom: 1rem; flex-wrap: wrap;">
+                            <span style="padding: 0.25rem 0.75rem; background: var(--accent-color); color: white; border-radius: 4px; font-size: 0.85rem;">Technical Guide</span>
+                            <span style="padding: 0.25rem 0.75rem; background: var(--secondary-color); color: white; border-radius: 4px; font-size: 0.85rem;">Product Spotlight</span>
+                            <span style="color: var(--text-light); font-size: 0.9rem;"><i class="far fa-calendar"></i> December 24, 2025</span>
+                        </div>
+                        <h2 style="font-size: 1.5rem; color: var(--primary-color); margin-bottom: 1rem;">
+                            <a href="blog/cast-steel-wcb-globe-valve-butt-weld-ends.html" style="color: inherit; text-decoration: none;">
+                                Cast Steel (WCB) Globe Valve with Butt Weld Ends: Complete Technical Guide
+                            </a>
+                        </h2>
+                        <p style="color: var(--text-color); line-height: 1.7; margin-bottom: 1.5rem;">
+                            Comprehensive guide to Cast Steel ASTM A216 WCB Globe Valves with Butt Weld Ends. Learn about specifications, materials, testing standards, and applications for high-pressure industrial service.
+                        </p>
+                        <a href="blog/cast-steel-wcb-globe-valve-butt-weld-ends.html" class="btn btn-secondary">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </article>
+
             </div>
         </section>
 
