--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="faqs.html">FAQs</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
