Update NRV and Brass Y-Strainer products with new images and enhanced keywords
- NRV: Added vertical and horizontal product images (vertical_nrv_ss_304.jpeg, horizontal_nrv_ss_304.jpeg)
- Brass Y-Strainer: Added product and technical drawing images (YSTRAINER_Brass.jpg, YSTRAINER_Brass_Technical_drawing.jpg)
- Enhanced SEO keywords for both products
- Updated structured data with new image references

--- a/products/nrv-horizontal-vertical-type.html
+++ b/products/nrv-horizontal-vertical-type.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NRV Horizontal & Vertical Type | Non-Return Valve | Supreme Valves India</title>
     <meta name="description" content="SS 304 Non-Return Valve (NRV) in Horizontal and Vertical Type. Lift Type design with BSP Female threads. Suitable for fire protection and water systems. - Fire Lines, Water Systems, Industrial Piping. Premium quality from Supreme Valves India.">
-    <meta name="keywords" content="NRV, Non-Return Valve, Check Valve, Horizontal NRV, Vertical NRV, SS 304 NRV, Fire Protection Valve, BSP NRV, Supreme Valves India">
+    <meta name="keywords" content="NRV, Non-Return Valve, Check Valve, Horizontal NRV, Vertical NRV, SS 304 NRV, Fire Protection Valve, BSP NRV, Lift Type Check Valve, Stainless Steel NRV, Fire Line NRV, Water System NRV, BSP Female NRV, SS 304 Check Valve, Non Return Valve India, NRV Exporter, NRV Supplier, Supreme Valves India">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "NRV Horizontal & Vertical Type",
-      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/hero_image.jpeg",
+      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/vertical_nrv_ss_304.jpeg",
       "description": "SS 304 Non-Return Valve (NRV) in Horizontal and Vertical Type. Lift Type design with BSP Female threads. Suitable for fire protection and water systems.",
       "brand": {
         "@type": "Brand",
@@ -125,7 +125,10 @@
 
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; margin-bottom: 4rem;">
             <div>
-                <img src="../assets/Valves and Projects/hero_image.jpeg" alt="NRV Horizontal & Vertical Type" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                <div style="display: grid; gap: 1rem;">
+                    <img src="../assets/Valves and Projects/vertical_nrv_ss_304.jpeg" alt="NRV Vertical Type SS 304" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                    <img src="../assets/Valves and Projects/horizontal_nrv_ss_304.jpeg" alt="NRV Horizontal Type SS 304" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                </div>
             </div>
             <div>
                 <span style="display: inline-block; padding: 0.5rem 1rem; background: var(--lighter-gray); color: var(--accent-color); border-radius: 6px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem;">Check Valves</span>
