--- a/products/brass-y-type-strainer-bsp.html
+++ b/products/brass-y-type-strainer-bsp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brass Y-Type Strainer BSP | Supreme Valves India</title>
     <meta name="description" content="Brass Y-Type Strainer with BSP Female Threads. 45° screen angle with removable SS perforated screen. Suitable for fire protection, water, and industrial piping. - Fire Protection, Water Systems, Industrial Applications. Premium quality from Supreme Valves India.">
-    <meta name="keywords" content="Brass Y-Type Strainer, Y Strainer, BSP Strainer, Fire Protection Strainer, Water Strainer, Industrial Strainer, Brass Strainer, Supreme Valves India">
+    <meta name="keywords" content="Brass Y-Type Strainer, Y Strainer, BSP Strainer, Fire Protection Strainer, Water Strainer, Industrial Strainer, Brass Strainer, Y Type Strainer BSP Female, CW617N Brass Strainer, SS 304 Screen Strainer, 45 Degree Strainer, Inline Strainer, Removable Screen Strainer, 20 Bar Strainer, Brass Y Strainer India, Y Strainer Exporter, Y Strainer Supplier, Supreme Valves India">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "Brass Y-Type Strainer BSP",
-      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/hero_image.jpeg",
+      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/YSTRAINER_Brass.jpg",
       "description": "Brass Y-Type Strainer with BSP Female Threads. 45° screen angle with removable SS perforated screen. Suitable for fire protection, water, and industrial piping.",
       "brand": {
         "@type": "Brand",
@@ -125,7 +125,10 @@
 
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; margin-bottom: 4rem;">
             <div>
-                <img src="../assets/Valves and Projects/hero_image.jpeg" alt="Brass Y-Type Strainer BSP" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                <div style="display: grid; gap: 1rem;">
+                    <img src="../assets/Valves and Projects/YSTRAINER_Brass.jpg" alt="Brass Y-Type Strainer BSP" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                    <img src="../assets/Valves and Projects/YSTRAINER_Brass_Technical_drawing.jpg" alt="Brass Y-Type Strainer Technical Drawing" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                </div>
             </div>
             <div>
                 <span style="display: inline-block; padding: 0.5rem 1rem; background: var(--lighter-gray); color: var(--accent-color); border-radius: 6px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem;">Strainers</span>
