Fix structured data JSON syntax error in knife-edge-gate-valve-flanged.html
Issue: Unescaped quotes in description field causing JSON parsing error
- Changed '2" to 16"' to '2 inch to 16 inch'
- Validated JSON-LD structure
- Fixes Google Search Console error: 'Missing comma or closing brace'

This resolves the unparsable structured data error reported in Search Console.

--- a/products/knife-edge-gate-valve-flanged.html
+++ b/products/knife-edge-gate-valve-flanged.html
@@ -19,7 +19,7 @@
       "@type": "Product",
       "name": "Knife Edge Gate Valve Flanged",
       "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/hero_image.jpeg",
-      "description": "Knife Edge Gate Valve for powder and slurry applications. Available in WCB and Stainless Steel with sizes from 2" to 16".",
+      "description": "Knife Edge Gate Valve for powder and slurry applications. Available in WCB and Stainless Steel with sizes from 2 inch to 16 inch.",
       "brand": {
         "@type": "Brand",
         "name": "Supreme Valves India"
