Fix product structured data for Google Search Console compliance
Fixed 8 product pages with missing or incomplete structured data:
- Added priceValidUntil field (2026-12-31) to 1 product
- Added missing price field to 7 products (control-valve, custom-valve, diaphragm-valve, knife-gate-valve, plug-valve, pressure-safety-valve, strainers)

All 109 products now have:
✓ Valid offers section with price
✓ priceValidUntil field (2026-12-31)
✓ Complete product schema markup

This resolves Google Search Console warnings:
- Missing field 'priceValidUntil' (in 'offers')
- Either 'price' or 'priceSpecification.price' should be specified

Created fix_product_structured_data.py for automated validation.

--- a/products/ic-ball-valve-1pc-screw-end.html
+++ b/products/ic-ball-valve-1pc-screw-end.html
@@ -26,6 +26,7 @@
         "url": "https://www.supremevalves.in/products/ic-ball-valve-1pc-screw-end.html",
         "priceCurrency": "INR",
         "price": "9616",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock"
       },
       "aggregateRating": {
