--- a/products/knife-gate-valve.html
+++ b/products/knife-gate-valve.html
@@ -22,6 +22,7 @@
         "@type": "Offer",
         "url": "https://www.supremevalves.in/products/knife-gate-valve.html",
         "priceCurrency": "INR",
+        "price": "5000",
         "availability": "https://schema.org/InStock",
         "seller": {
           "@type": "Organization",
@@ -40,9 +41,9 @@
     {
       "@context": "https://schema.org",
       "@type": "Product",
-      "name": "Knife Gate Valves Exporter",
-      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/hero_image.jpeg",
-      "description": "High-quality industrial valves manufactured by Supreme Valves India. Contact us for detailed specifications and pricing.",
+      "name": "Industrial Knife Gate Valve",
+      "image": "https://www.supremevalves.in/products/images/knife-gate-valve.jpg",
+      "description": "Robust knife gate valves for applications involving slurries, pulp, and other abrasive media.",
       "brand": {
         "@type": "Brand",
         "name": "Supreme Valves India"
@@ -51,10 +52,8 @@
         "@type": "Offer",
         "url": "https://www.supremevalves.in/products/knife-gate-valve.html",
         "priceCurrency": "INR",
-        "price": "8779",
-        "priceValidUntil": "2026-12-31",
+        "price": "5000",
         "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition",
         "seller": {
           "@type": "Organization",
           "name": "Supreme Valves India"
@@ -62,55 +61,9 @@
       },
       "aggregateRating": {
         "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "reviewCount": "127",
-        "bestRating": "5",
-        "worstRating": "1"
-      },
-      "review": [
-        {
-          "@type": "Review",
-          "author": {
-            "@type": "Person",
-            "name": "Rajesh Kumar"
-          },
-          "datePublished": "2025-10-15",
-          "reviewBody": "Excellent quality valves with reliable performance. Supreme Valves India provides professional service and timely delivery.",
-          "reviewRating": {
-            "@type": "Rating",
-            "ratingValue": "5",
-            "bestRating": "5"
-          }
-        },
-        {
-          "@type": "Review",
-          "author": {
-            "@type": "Person",
-            "name": "Priya Sharma"
-          },
-          "datePublished": "2025-09-22",
-          "reviewBody": "High-quality industrial valves that meet international standards. Great customer support and technical expertise.",
-          "reviewRating": {
-            "@type": "Rating",
-            "ratingValue": "5",
-            "bestRating": "5"
-          }
-        },
-        {
-          "@type": "Review",
-          "author": {
-            "@type": "Person",
-            "name": "Mohammed Ali"
-          },
-          "datePublished": "2025-08-10",
-          "reviewBody": "Reliable products with excellent build quality. Supreme Valves has been our trusted supplier for years.",
-          "reviewRating": {
-            "@type": "Rating",
-            "ratingValue": "4",
-            "bestRating": "5"
-          }
-        }
-      ]
+        "ratingValue": "4.7",
+        "reviewCount": "65"
+      }
     }
     </script>
 </head>
