Integrate Facebook and Instagram social media feeds on homepage
- Added 'Follow Our Updates' section to index.html
- Integrated official Facebook Page Plugin for live timeline updates
- Added responsive CSS for social media grid in styles.css
- Included placeholder and instructions for Instagram feed integration
- Added Facebook SDK for JavaScript

--- a/index.html
+++ b/index.html
@@ -340,7 +340,57 @@
                 </div>
             </div>
         </section>
+        <!-- Social Media Section -->
+        <section class="social-section">
+            <div class="container">
+                <h2 class="section-title">Follow Our Updates</h2>
+                <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem auto; font-size: 1.1rem; color: var(--text-light);">Stay connected with Supreme Valves India for the latest product news, industry insights, and project highlights on social media.</p>
+                
+                <div class="social-grid">
+                    <!-- Facebook Feed -->
+                    <div class="social-col fb-col">
+                        <h3><i class="fab fa-facebook"></i> Facebook Updates</h3>
+                        <div class="fb-container">
+                            <div class="fb-page" 
+                                 data-href="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/" 
+                                 data-tabs="timeline" 
+                                 data-width="500" 
+                                 data-height="500" 
+                                 data-small-header="false" 
+                                 data-adapt-container-width="true" 
+                                 data-hide-cover="false" 
+                                 data-show-facepile="true">
+                                <blockquote cite="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/" class="fb-xfbml-parse-ignore">
+                                    <a href="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/">Supreme Enterprise</a>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Instagram Feed -->
+                    <div class="social-col ig-col">
+                        <h3><i class="fab fa-instagram"></i> Instagram Feed</h3>
+                        <div class="ig-feed-container">
+                            <!-- Placeholder for Instagram Feed -->
+                            <div class="ig-feed-placeholder">
+                                <p style="margin-bottom: 1rem;">To display your live Instagram feed here, you can use a service like <strong>LightWidget</strong> or <strong>Elfsight</strong>.</p>
+                                <p style="font-size: 0.9rem; color: var(--text-light);">Once you have your embed code, replace this placeholder.</p>
+                                <a href="https://www.instagram.com/supremevalvesindia/" target="_blank" class="btn btn-secondary" style="margin-top: 1rem;">
+                                    <i class="fab fa-instagram"></i> View on Instagram
+                                </a>
+                            </div>
+                            <!-- Example LightWidget Embed (Requires setup by user) -->
+                            <!-- <iframe src="//lightwidget.com/widgets/YOUR_WIDGET_ID.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0"></script>
 
     <div class="whatsapp-widget">
         <a href="https://api.whatsapp.com/send/?phone=919773278770&text&type=phone_number&app_absent=0" target="_blank" aria-label="Chat with us on WhatsApp">
